Fix build.gradle (fat jar support)